--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -129,6 +129,9 @@ td[id^="my_contract_offer_name_"].best-offer {
   margin: 0px 0px 30px 0px;
   width: 100%;
 }
+.hide-option {
+	display: none;
+}
 .hidden_div {
 	display: none;
 }
