--- a/app/views/games/index.html.erb
+++ b/app/views/games/index.html.erb
@@ -35,9 +35,9 @@
 								</td>
 								<td class="mdl-data-table__cell--non-numeric normal-text">
 									<%= link_to league_game_path(game.get_league, game), class: "content-link" do %>
-										<span><%= game.home_team.title %></span>
+										<span><%= truncate(game.home_team.title, length: 20) %></span>
 										<br/>
-										<span><%= game.away_team.title %></span>
+										<span><%= truncate(game.away_team.title, length: 20) %></span>
 									<% end %>
 								</td>
 								<td class="mdl-data-table__cell--non-numeric normal-text">
