--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -39,6 +39,14 @@
           </tr>
           <tr>
             <td class="mdl-data-table__cell--non-numeric normal-text">
+              Active deadline
+            </td>
+            <td class="mdl-data-table__cell--non-numeric normal-text">
+              <%= @home_team.league.next_game_week_deadline.strftime("%a %d %b, %l:%M%P %Z") %>
+            </td>
+          </tr>
+          <tr>
+            <td class="mdl-data-table__cell--non-numeric normal-text">
               Score
             </td>
             <td class="mdl-data-table__cell--non-numeric normal-text">
