Set up player lineup rake

--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -77,7 +77,7 @@
 								<%= team_player.squad_position.short_name %>
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= link_to team_player.full_name, league_team_team_player_path(@league, team_player.team, team_player), class: "content-link" %>
+								<%= link_to team_player.full_name(true, 17), league_team_team_player_path(@league, team_player.team, team_player), class: "content-link" %>
 							</td>
 							<td class="normal-text">
 								<%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %>
@@ -85,7 +85,7 @@
 							<td class="mdl-data-table__cell--non-numeric normal-text">
 								<% first_team_players = @team.team_players.where(first_team: true) %>
 								<% if first_team_players.count < 11 %>
-									<% if team_player.player.playing_position != 'Goalkeeper' || first_team_players.joins(:squad_position).where('squad_positions.short_name = ?', 'GK').count === 0 %>
+									<% if (team_player.player.playing_position == 'Goalkeeper' && first_team_players.joins(:squad_position).where('squad_positions.short_name = ?', 'GK').count === 0 ) || (team_player.player.playing_position != 'Goalkeeper' && first_team_players.joins(:squad_position).where.not('squad_positions.short_name = ?', 'GK').count < 10 ) %>
 										<%= form_for team_player, url: update_first_team_league_team_team_player_path(@league, team_player.team, team_player)  do |f| %>
 											<%= f.hidden_field :squad_position_id, value: team_player.get_squad_position_from_players_playing_position.id %>
 											<%= f.submit "Add", class: "positive_action_button" %>
