--- a/app/views/leagues/show.html.erb
+++ b/app/views/leagues/show.html.erb
@@ -34,7 +34,7 @@
 							<tr>
 								<td class="mdl-data-table__cell--non-numeric normal-text">
 									<% if standings_row[:team_record].user != @current_user %>
-										<%= truncate(standings_row[:team_record].title, length: 19) %>
+										<%= link_to truncate(standings_row[:team_record].title, length: 19), display_league_team_path(@league, standings_row[:team_record]), class: "content-link" %>
 									<% else %>
 										<%= link_to truncate(standings_row[:team_record].title, length: 19), league_team_path(@league, standings_row[:team_record]), class: "content-link" %>
 									<% end %>
