--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -36,7 +36,7 @@
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
 								<%= form_for team_player, url: update_first_team_league_team_team_player_path(@league, team_player.team, team_player)  do |f| %>
-									<%= f.submit "Remove", class: "negative_action_button" %>
+									<%= f.submit "Drop", class: "negative_action_button" %>
 								<% end %>
 							</td>
 						</tr>
