--- a/app/views/transfers/show.html.erb
+++ b/app/views/transfers/show.html.erb
@@ -63,6 +63,8 @@
 									<% if transfer_item.receiving_team === @transfer.primary_team %>
 							  		<% if transfer_item.transfer_item_type === "Player" %>
 							  			<%= transfer_item.team_player.full_name(true) %>
+							  			<br/>
+							  			(<%= number_to_currency(transfer_item.team_player.current_contract.weekly_salary_cents, precision: 0) %> / wk)
 							  		<% elsif transfer_item.transfer_item_type === "Cash" %>
 							  			<%= number_to_currency(transfer_item.cash_cents, precision: 0) %>
 							  		<% end %>
@@ -72,6 +74,8 @@
 								<% if transfer_item.receiving_team === @transfer.secondary_team %>
 						  		<% if transfer_item.transfer_item_type === "Player" %>
 						  			<%= transfer_item.team_player.full_name(true) %>
+						  			<br/>
+						  			(<%= number_to_currency(transfer_item.team_player.current_contract.weekly_salary_cents, precision: 0) %> / wk)
 						  		<% elsif transfer_item.transfer_item_type === "Cash" %>
 						  			<%= number_to_currency(transfer_item.cash_cents, precision: 0) %>
 						  		<% end %>
