--- a/app/views/contracts/_form.html.erb
+++ b/app/views/contracts/_form.html.erb
@@ -80,7 +80,7 @@
     </div>
     <div class="form-group">
       <%= f.submit "Offer contract", class: "mdl-button mdl-js-button mdl-button--raised mdl-js-ripple-effect mdl-button--colored" %>
-      <%= link_to "Cancel", league_contracts_path(league), class: "cancel_link_anchor" %>
+      <%= link_to "Cancel", :back, class: "cancel_link_anchor" %>
     </div>
   </div>
 <% end %>
