--- a/app/views/news_items/index.html.erb
+++ b/app/views/news_items/index.html.erb
@@ -10,7 +10,7 @@
     <div class="mdl-card__actions">
     	<% if news_items.count > 0 %>
 	    	<table class="mdl-data-table mdl-js-data-table mdl-shadow--2dp">
-	    		<% news_items.each do |news_item| %>
+	    		<% news_items.where('created_at > ?', 2.weeks.ago).each do |news_item| %>
 	    			<% resource = news_item.news_item_resource %>
 	    			<tr>
 							<td class="mdl-data-table__cell--non-numeric normal-text" colspan="2" style="border-bottom:0px;">
@@ -33,6 +33,9 @@
 						</tr>
 					<% end %>
 				</table>
+			<% else %>
+				<% offset = rand(@current_user.teams.count) %>
+				<span class="normal-text">:-/ It's a slow news day.</span>
 			<% end %>
     </div>
   </div>
