--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,7 +11,7 @@
 	  <%= csrf_meta_tags %>
 	</head>
 	<body id="body_id">
-		<div class="container">
+		<div class="container" id="wide-container">
 			<div id="header-row" class="row">
 				<div class="col-sm-3">
 					<%= link_to image_tag("gaffer_logo_263_x_328.png", class: "logo-icon"), root_path %>
