--- a/app/views/shared/_team_players.html.erb
+++ b/app/views/shared/_team_players.html.erb
@@ -16,7 +16,16 @@
 							<span>Name</span>
 						</th>
 						<th>
-							<span>Salary</span>
+							<span>Mp</span>
+						</th>
+						<th>
+							<span>Gs</span>
+						</th>
+						<th>
+							<span>A</span>
+						</th>
+						<th>
+							<span>Gc</span>
 						</th>
 						<th class="mdl-data-table__cell--non-numeric">
 							<span> </span>
@@ -29,10 +38,19 @@
 								<%= team_player.squad_position.short_name %>
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= link_to team_player.full_name(true, 17), league_team_team_player_path(@league, team_player.team, team_player), class: "content-link" %>
+								<%= link_to team_player.full_name(true, 16), league_team_team_player_path(@league, team_player.team, team_player), class: "content-link" %>
 							</td>
 							<td class="normal-text">
-								<%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %>
+								<%= team_player.get_season_stats(Season.current.first).sum(:minutes_played) || 0 %>
+							</td>
+							<td class="normal-text">
+								<%= team_player.get_season_stats(Season.current.first).sum(:goals) || 0  %>
+							</td>
+							<td class="normal-text">
+								<%= team_player.get_season_stats(Season.current.first).sum(:assists) || 0  %>
+							</td>
+							<td class="normal-text">
+								<%= team_player.get_season_stats(Season.current.first).sum(:goals_conceded) || 0  %>
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
 								<%= form_for team_player, url: update_first_team_league_team_team_player_path(@league, team_player.team, team_player)  do |f| %>
@@ -65,7 +83,16 @@
 							<span>Name</span>
 						</th>
 						<th>
-							<span>Salary</span>
+							<span>Mp</span>
+						</th>
+						<th>
+							<span>Gs</span>
+						</th>
+						<th>
+							<span>A</span>
+						</th>
+						<th>
+							<span>Gc</span>
 						</th>
 						<th class="mdl-data-table__cell--non-numeric">
 							<span> </span>
@@ -75,13 +102,22 @@
 					
 						<tr id="<%= dom_id(team_player) %>">
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= team_player.squad_position.short_name %> (<%= SquadPosition.long_name_to_short_name(team_player.player.playing_position) %>)
+								<%= team_player.squad_position.short_name %> <%= SquadPosition.long_name_to_short_name(team_player.player.playing_position) %>
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
-								<%= link_to team_player.full_name(true, 17), league_team_team_player_path(@league, team_player.team, team_player), class: "content-link" %>
+								<%= link_to team_player.full_name(true, 16), league_team_team_player_path(@league, team_player.team, team_player), class: "content-link" %>
 							</td>
 							<td class="normal-text">
-								<%= number_to_currency(team_player.current_contract.weekly_salary_cents, precision: 0) %>
+								<%= team_player.get_season_stats(Season.current.first).sum(:minutes_played) %>
+							</td>
+							<td class="normal-text">
+								<%= team_player.get_season_stats(Season.current.first).sum(:goals) %>
+							</td>
+							<td class="normal-text">
+								<%= team_player.get_season_stats(Season.current.first).sum(:assists) %>
+							</td>
+							<td class="normal-text">
+								<%= team_player.get_season_stats(Season.current.first).sum(:goals_conceded) %>
 							</td>
 							<td class="mdl-data-table__cell--non-numeric normal-text">
 								<% first_team_players = @team.team_players.where(first_team: true) %>
